--- a/src/styles/Chart.css
+++ b/src/styles/Chart.css
@@ -51,7 +51,8 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  gap: 30px
+  gap: 30px;
+  flex-wrap: wrap;
 }
 
 .form-statewise{
@@ -93,7 +94,7 @@
   /* display: flex; */
   /* flex-direction: row; */
   /* gap: 10px; */
-  width: 100%;
+
   padding: 30px;
   position: relative;
   /* height: 70vh; */
@@ -112,6 +113,7 @@
   /* height: 70vh; */
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .chartComp-statewise select{
@@ -192,4 +194,8 @@
   .chart-container {
     width: 100vw;
   }
+}
+
+@media only screen and (max-width: 600px) {
+
 }
